--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,8 +21,8 @@ stages:
 - stage: Build
   displayName: Build and push stage
   jobs:
-  - job: Build
-    displayName: Build
+  - job: coordinator-build
+    displayName: Build and deploy coordinator
     pool:
       vmImage: $(vmImageName)
     steps:
@@ -35,6 +35,11 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+  - job: worker-build
+    displayName: Build and deploy worker
+    pool:
+      vmImage: $(vmImageName)
+    steps:
     - task: Docker@2
       displayName: Build and push worker image to container registry
       inputs:
@@ -44,6 +49,11 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+  - job: frontend-build
+    displayName: Build and deploy frontend
+    pool:
+      vmImage: $(vmImageName)
+    steps:
     - task: Docker@2
       displayName: Build and push frontend image to container registry
       inputs:
